--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "spotify-clone",
+  "name": "soundwave",
   "version": "1.0.0",
-  "description": "Clon de Spotify que carga automáticamente archivos MP3",
+  "description": "SoundWave carga automáticamente archivos MP3",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
@@ -16,7 +16,7 @@
   "keywords": [
     "music",
     "player",
-    "spotify",
+    "SoundWave",
     "mp3",
     "web"
   ],
